<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_name" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="prime_book_typing_on_off"
        android:summary="@string/prime_book_typeing_on_off_title_summ"
        android:title="@string/prime_book_typeing_on_off_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="double_tap"
        android:summary="@string/double_tap_summ"
        android:title="@string/double_tap_title" />
    
    <ListPreference
        android:defaultValue="1"
        android:entries="@array/themeNameArray"
        android:entryValues="@array/themeValueArray"
        android:key="choose_theme"
        android:summary="@string/choose_theme_summ"
        android:title="@string/choose_theme_title" />

    <ListPreference
        android:defaultValue="word"
        android:entries="@array/suggestionMethodNameArray"
        android:entryValues="@array/suggestionMethodValueArray"
        android:key="suggestion_method"
        android:summary="@string/suggestion_method_summ"
        android:title="@string/suggestion_method_title" />

    <ListPreference
        android:defaultValue="lstm_first"
        android:entries="@array/suggestionOrderNameArray"
        android:entryValues="@array/suggestionOrderValueArray"
        android:key="suggestion_order"
        android:summary="@string/suggestion_order_summ"
        android:title="@string/suggestion_order_title"
        android:dependency="suggestion_method" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="play_sound"
        android:summary="@string/play_sound_summ"
        android:title="@string/play_sound_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="haptic_feedback"
        android:summary="@string/haptic_feedback_summ"
        android:title="@string/haptic_feedback_title" />
    <SeekBarPreference
        android:key="haptic_strength"
        android:title="@string/haptic_strength_title"
        android:summary="@string/haptic_strength_summ"
        android:defaultValue="25"
        android:max="100"
        android:dependency="haptic_feedback" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="hint_keylabel"
        android:summary="@string/hint_keylabel_summ"
        android:title="@string/hint_keylabel_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="proximity_correction"
        android:summary="@string/proximity_correction_summ"
        android:title="@string/proximity_correction_title" />

    <EditTextPreference
        android:key="test_keyboard_text"
        android:summary="@string/test_keyboard_summ"
        android:title="@string/test_keyboard_title" />

    <Preference
        android:key="go_to_ime"
        android:summary="@string/go_to_ime_setting_summ"
        android:title="@string/go_to_ime_setting" >
    </Preference>
    <Preference
        android:key="choose_keyboard"
        android:summary="@string/choose_keyboard_summ"
        android:title="@string/choose_keyboard_title" >
    </Preference>
    <PreferenceCategory android:title="@string/english_typing_category">
        <CheckBoxPreference
            android:key="english_suggestions"
            android:defaultValue="true"
            android:title="@string/english_suggestions_title"
            android:summary="@string/english_suggestions_summ" />
        <CheckBoxPreference
            android:key="auto_capitalize"
            android:defaultValue="true"
            android:title="@string/auto_capitalize_title"
            android:summary="@string/auto_capitalize_summ" />
        <CheckBoxPreference
            android:key="auto_correct"
            android:defaultValue="true"
            android:title="@string/auto_correct_title"
            android:summary="@string/auto_correct_summ" />
    </PreferenceCategory>

    <Preference android:title="@string/faq" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.facebook.com/groups/mmUnicode" />
    </Preference>

</PreferenceScreen>